force-app/main/default/objects/Pricing_send_chatter__e/Pricing_send_chatter__e.object-meta.xml
<CustomObject>
    <description>ライシングから営業マンへ送るchatterを匿名送信にするためのオブジェクト　佐野</description>
    <label>プライシングchatter送信</label>
</CustomObject>