force-app/main/default/objects/Pricing_send_chatter__e/fields/MentionID__c.field-meta.xml
<CustomField>
    <fullName>MentionID__c</fullName>
    <description>chatterメンション先（買取商談所有者)のIDを取得　佐野</description>
    <label>メンション先ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>