force-app/main/default/objects/Pricing_send_chatter__e/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <description>買取商談のIDを取得</description>
    <label>買取商談ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>