force-app/main/default/objects/Pricing_send_chatter__e/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>送信するテキストを取得</description>
    <label>テキスト</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>